force-app/main/default/objects/Contract_Renewal__c/Contract_Renewal__c.object-meta.xml
<CustomObject>
    <label>Contract Renewal</label>
    <nameField>
        <displayFormat>REN-{0000}</displayFormat>
        <label>Contract Renewal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Renewals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>