force-app/main/default/objects/Contract_Renewal__c/fields/Original_Contract__c.field-meta.xml
<CustomField>
    <fullName>Original_Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Original Contract</label>
    <referenceTo>YGSF_Contract__c</referenceTo>
    <relationshipLabel>Renewals (Original)</relationshipLabel>
    <relationshipName>Renewals_From</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>