force-app/main/default/objects/Contract_Renewal__c/fields/Renewal_Type__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Type__c</fullName>
    <label>Renewal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Renewal</fullName>
            </value>
            <value>
                <fullName>Manual Renewal</fullName>
            </value>
            <value>
                <fullName>Renegotiation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>