force-app/main/default/objects/Contract_Renewal__c/fields/Renewed_Contract__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewed Contract</label>
    <referenceTo>YGSF_Contract__c</referenceTo>
    <relationshipLabel>Renewals (New)</relationshipLabel>
    <relationshipName>Renewals_To</relationshipName>
    <type>Lookup</type>
</CustomField>